<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_baseline_home_24" />
    <item android:id="@+id/action_settings"
        android:title="@string/menu_network"
        android:icon="@drawable/ic_baseline_group_24" />
    <item android:id="@+id/action_navigation"
        android:title="@string/menu_post"
        android:icon="@drawable/ic_baseline_add_comment_24" />
    <item android:id="@+id/action_notify"
        android:title="@string/menu_notify"
        android:icon="@drawable/ic_baseline_notifications_24" />
    <item android:id="@+id/action_jobs"
        android:title="@string/menu_jobs"
        android:icon="@drawable/ic_baseline_home_repair_service_24" />
</menu>