<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_view"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/linkedin_logo_transparent"
            android:contentDescription="@string/linkedin_logo" />

        <TextView
            android:id="@+id/text_linked_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_linkedin"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_below="@id/img_view"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in"
            android:layout_below="@id/text_linked_in"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="0dp"
            android:hint="@string/first_name"
            android:paddingLeft="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginBottom="24dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:hint="@string/last_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_text"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Agree &amp; Join"
        app:backgroundTint="#0B63FF"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="16dp"
        android:layout_marginBottom="32dp"/>


</LinearLayout>