<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_person_add_alt_1_24"
                android:scaleType="centerCrop" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/user_name" />
                <TextView
                    android:id="@+id/textViewSpecie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/ceo_at_google" />
                <TextView
                    android:id="@+id/textViewStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:text="@string/wimbledon_united_kingdom"
                     />
            </LinearLayout>
            </LinearLayout>

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        android:padding="16dp"
                        android:src="@drawable/linkedin_logo_transparent"
                        android:contentDescription="@string/menu_home" />


                    <TextView
                        android:id="@+id/textPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:textSize="16sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/sms_text" />


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"

                android:background="?android:attr/listDivider" />

            <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="15dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="15dp">

                        <LinearLayout
                            android:id="@+id/linear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_weight="1"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="24sp"
                                        android:fontFamily="sans-serif-light"

                                        android:src="@drawable/ic_baseline_thumb_up_24"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="14sp"
                                        android:fontFamily="sans-serif-light"

                                        android:text="@string/like">

                                    </TextView>
                                </LinearLayout>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_weight="1"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="24sp"
                                        android:fontFamily="sans-serif-light"
                                        android:src="@drawable/ic_baseline_chat_24"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="13sp"
                                        android:fontFamily="sans-serif-light"
                                        android:text="@string/comment">

                                    </TextView>
                                </LinearLayout>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_weight="1"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="24sp"
                                        android:fontFamily="sans-serif-light"
                                        android:src="@drawable/ic_baseline_screen_share_24"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="14sp"
                                        android:fontFamily="sans-serif-light"
                                        android:text="@string/share">

                                    </TextView>
                                </LinearLayout>
                            </RelativeLayout><RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="24sp"
                                    android:fontFamily="sans-serif-light"
                                    android:src="@drawable/ic_baseline_send_24"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:fontFamily="sans-serif-light"
                                    android:text="@string/send">

                                </TextView>
                            </LinearLayout>
                        </RelativeLayout>

                        </LinearLayout>
                    </RelativeLayout>
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="12dp"

                android:background="?android:attr/listDivider" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>